docs/1.10.3/developer-guide/contributing/index.md
---
title: Contributing
layout: doc
---

# Contributing

One of the great things about open source projects is that anyone can contribute in any number of meaningful ways. ESLint couldn't exist without the help of the many contributors it's had since the project began, and we want you to feel like you can contribute and make a difference as well.

This guide is intended for anyone who wants to contribute to an ESLint project. Please read it carefully as it answers a lot of the questions many newcomers have when first working with our projects.

## [Signing the CLA](/cla)

In order to submit code or documentation to an ESLint project, please electronically sign the [Contributor License Agreement](https://eslint.org/cla). The CLA is you giving us permission to use your contribution.

## [Bug Reporting](reporting-bugs)

Think you found a problem? We'd love to hear about it. This section explains how to submit a bug, the type of information we need to properly verify it, and the overall process.

## Proposing a [New Rule](new-rules)

We get a lot of proposals for new rules in ESLint. This section explains how we determine which rules are accepted and what information you should provide to help us evaluate your proposal.

## Requesting a [Change](changes)

If you'd like to request a change other than a bug fix or new rule, this section explains that process.

## [Working on Issues](working-on-issues)

Have some extra time and want to contribute? This section talks about the process of working on issues.

## Submitting a [Pull Request](pull-requests)

We're always looking for contributions from the community. This section explains the requirements for pull requests and the process of contributing code.
